HTML-Vorlagen aktualisiert

--- a/html/23.html
+++ b/html/23.html
@@ -21,7 +21,7 @@
 	</title>
 </head>
 <body>
-	<div id="logo">
+	<div id="logo" onclick="location.href='http://www.deshalbfrei.org'">
 
 	</div>
 	<div id="title">
