--- a/html/1.html
+++ b/html/1.html
@@ -11,6 +11,7 @@
 	<meta name="author" content="Pierre Schmitz" />
 	<meta name="robots" content="index,follow" />
 	<meta name="revisit-after" content="3 days" />
+	<link rel="shortcut icon" href="http://www.laber-land.de/favicon.ico" />
 	<style type="text/css">@import url(html/<!-- id -->.css) all;</style>
 	<!--[if IE]>
 		<style type="text/css">@import url(html/ie.css);</style>
@@ -21,7 +22,7 @@
 	</title>
 </head>
 <body>
-	<div id="logo">
+	<div id="logo" onclick="location.href='?page=Portal;id=1;forum=1'">
 
 	</div>
 	<div id="title">
