restore html-templates from backup; sorry ;-)

--- a/html/12.html
+++ b/html/12.html
@@ -24,18 +24,36 @@
 	<div id="logo">
 
 	</div>
-	<div id="title">
+<center>
+	
+<div id="welcome">
+	
+	Hallo <!-- user --> !<br></br>Willkommen im <b><font color="#990000">Manga</font><font color="#000000">Center</font></b>,<br></br>DER Manga- und Anime-Forengemeinschaft <br></br><p></p>
+	</div>
+
+Du bist hier:
+ <div id="title">
+
 		<!-- title -->
-	</div>
-	<div id="welcome">
-		Willkommen <!-- user -->!
-	</div>
+	</div> 
+</center>
 	<div id="menu">
+
 		<!-- menu -->
 	</div>
-	<div id="body">
-		<!-- body -->
-	</div>
+
+<table border="0">
+<td width="102" style="background-image:
+url(http://www.akainosekaide.de/mangacenter/seitenlogo.jpg); background-repeat:no-repeat; background-position:top;"><tr ><img src="http://www.akainosekaide.de/mangacenter/blind.gif"></img></tr></td>
+<td><tr>
+<div id="body">
+<!-- body -->
+</div>
+</tr></td>
+</table>	
+<center>
+<p></p> Das MangaCenter-Board ist Teil vom <a href="http://www.laber-land.de"><b> Laber-Land</b></a><br></br>
+weitere <img src="http://www.laber-land.de/~akai/mangacenter/minill.gif"></img> -Boards findest Du hier:</center>
 	<div id="webring">
 		<!-- webring -->
 	</div>
