--- a/html/14.html
+++ b/html/14.html
@@ -13,7 +13,7 @@
 	<meta name="revisit-after" content="3 days" />
 	<style type="text/css">@import url(html/<!-- id -->.css) all;</style>
 	<!--[if IE]>
-		<style type="text/css">@import url(html/ie.css);</style>
+		<style type="text/css">@import url(http://home.arcor.de/fu924/ll.css);</style>
 	<![endif]-->
 	<script src="html/<!-- id -->.js" type="text/javascript"></script>
 	<title>
@@ -40,4 +40,5 @@
 		<!-- webring -->
 	</div>
 </body>
+<p align="center"><a href="http://www.youngtimer-magazin-online.de.vu" target="_top">Zurück zum Youngtimer - Magazin OnLine</a></p>
 </html>
