--- a/html/19.html
+++ b/html/19.html
@@ -12,8 +12,8 @@
 	<meta name="robots" content="index,follow" />
 	<meta name="revisit-after" content="3 days" />
 	<style type="text/css">@import url(html/<!-- id -->.css) all;</style>
-	<!--[if IE]>
-		<style type="text/css">@import url(html/ie.css);</style>
+	<!--[if IE ]>
+		<style type="text/css">@import url(html/<!-- id -->.css);</style>
 	<![endif]-->
 	<script src="html/<!-- id -->.js" type="text/javascript"></script>
 	<title>
