updated modified html-template

--- a/html/18.html
+++ b/html/18.html
@@ -27,9 +27,9 @@
 	<div id="title">
 		<!-- title -->
 	</div>
-	<div id="welcome">
+<!--	<div id="welcome">
 		Willkommen <!-- user -->!
-	</div>
+	</div>-->
 	<div id="menu">
 		<!-- menu -->
 	</div>
