huge update: new markup and attachment-handling; some refactorings

--- a/html/19.html
+++ b/html/19.html
@@ -13,9 +13,8 @@
 	<meta name="revisit-after" content="3 days" />
 	<style type="text/css">@import url(html/<!-- id -->.css) all;</style>
 	<!--[if IE ]>
-		<style type="text/css">@import url(html/<!-- id -->.css);</style>
+		<style type="text/css">@import url(html/ie.css);</style>
 	<![endif]-->
-	<script src="html/<!-- id -->.js" type="text/javascript"></script>
 	<title>
 		<!-- name --> :: <!-- title -->
 	</title>
