--- a/index.html
+++ b/index.html
@@ -6,37 +6,49 @@
 	<meta http-equiv="content-language" content="de" />
 	<meta http-equiv="expires" content="120" />
 	<meta name="description" content="Laber-Land - Forengemeinschaft" />
-	<meta name="keywords" content="<!-- title -->,<!-- name --> ,laber-land,pierre,schmitz,forum,foren,board,bulletin,kostenlos,webmaster,werbefrei,ll3" />
-	<meta name="title" content="<!-- name --> <!-- title -->" />
 	<meta name="author" content="Pierre Schmitz" />
 	<meta name="robots" content="index,follow" />
 	<meta name="revisit-after" content="3 days" />
-	<style type="text/css">@import url(html/<!-- id -->.css) all;</style>
+	<link rel="shortcut icon" href="http://www.laber-land.de/favicon.ico" />
+	<style type="text/css">@import url(html/1.css) all;</style>
 	<!--[if IE]>
 		<style type="text/css">@import url(html/ie.css);</style>
 	<![endif]-->
 	<title>
-		<!-- name --> :: <!-- title -->
+		Laber-Land :: Wartungsarbeiten
 	</title>
 </head>
 <body>
-	<div id="logo">
+	<div id="logo" onclick="location.href='?page=Portal;id=1;forum=1'">
 
 	</div>
 	<div id="title">
-		<!-- title -->
+		Laber-Land :: Wartungsarbeiten
 	</div>
-<!--	<div id="welcome">
-		Willkommen <!-- user -->!
-	</div>-->
+	<div id="welcome">
+
+	</div>
 	<div id="menu">
-		<!-- menu -->
+
 	</div>
 	<div id="body">
-		<!-- body -->
-	</div>
-	<div id="webring">
-		<!-- webring -->
+		<table class="frame">
+			<tr>
+				<td class="title" colspan="2">
+					Wartungsarbeiten
+				</td>
+			</tr>
+			<tr>
+				<td class="main">
+					<img src="images/dev.png" alt="" />
+				</td>
+				<td class="main">
+					<p>
+					Die LL-Software wird zur Zeit aktualisiert. Wir sind in ein paar Minuten wieder online.
+					</p>
+				</td>
+			</tr>
+		</table>
 	</div>
 </body>
 </html>
