--- a/html/20.html
+++ b/html/20.html
@@ -21,21 +21,31 @@
 	</title>
 </head>
 <body>
-	<div id="logo" onclick="location.href='?page=Portal;id=20;forum=257'">
+	<div id="head_container">
+		<div id="title">
+			<div id="logo"><img src="../archlinux/images/logo.png" alt="Arch logo" /></div>
+			<img src="../archlinux/images/title.png" alt="Arch linux" />
+		</div>
+		<div id="main_nav">
+			<ul>
+				<li><a href="http://archlinux.laber-land.de/download.php">Dateien</a></li>
+				<li><a href="http://aur.archlinux.org">AUR</a></li>
+				<li><a href="http://bugs.archlinux.org">Bugs</a></li>
+				<li><a href="http://wiki.archlinux.org">Wiki</a></li>
+				<li class="selected"><a href="#">Forum</a></li>
+				<li><a href="http://archlinux.laber-land.de">Start</a></li>
+			</ul>
+		</div>
+	</div>
+	<div id="content">
+		<div id="menu">
+			<!-- menu -->
+		</div>
+		<div id="body">
+			<!-- body -->
+		</div>
+	</div>
 
-	</div>
-	<div id="title">
-		<!-- title -->
-	</div>
-	<div id="welcome">
-		Willkommen <!-- user -->!
-	</div>
-	<div id="menu">
-		<!-- menu -->
-	</div>
-	<div id="body">
-		<!-- body -->
-	</div>
 	<div id="webring">
 		<!-- webring -->
 	</div>
