--- a/html/20.html
+++ b/html/20.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Pierre Schmitz" />
 	<meta name="robots" content="index,follow" />
 	<meta name="revisit-after" content="3 days" />
-	<link rel="shortcut icon" href="http://www.laber-land.de/images/archlinux/favicon.ico" />
+	<link rel="shortcut icon" href="http://archlinux.laber-land.de/favicon.ico" />
 	<style type="text/css">@import url(html/<!-- id -->.css) all;</style>
 	<!--[if IE]>
 		<style type="text/css">@import url(html/ie.css);</style>
