--- a/html/20.html
+++ b/html/20.html
@@ -23,8 +23,8 @@
 <body>
 	<div id="head_container">
 		<div id="title">
-			<div id="logo"><img src="../archlinux/images/logo.png" alt="Arch logo" /></div>
-			<img src="../archlinux/images/title.png" alt="Arch linux" />
+			<div id="logo"><img src="http://archlinux.laber-land.de/images/logo.png" alt="Arch logo" /></div>
+			<img src="http://archlinux.laber-land.de/images/title.png" alt="Arch linux" />
 		</div>
 		<div id="main_nav">
 			<ul>
