--- a/html/20.html
+++ b/html/20.html
@@ -29,9 +29,9 @@
 		<div id="main_nav">
 			<ul>
 				<li><a href="http://archlinux.laber-land.de/download.php">Dateien</a></li>
-				<li><a href="http://aur.archlinux.org">AUR</a></li>
-				<li><a href="http://bugs.archlinux.org">Bugs</a></li>
-				<li><a href="http://wiki.archlinux.org">Wiki</a></li>
+				<li><a href="http://archlinux.laber-land.de/aur.php">AUR</a></li>
+				<li><a href="http://archlinux.laber-land.de/bugs.php">Bugs</a></li>
+				<li><a href="http://archlinux.laber-land.de/showArticles.php">Wiki</a></li>
 				<li class="selected"><a href="#">Forum</a></li>
 				<li><a href="http://archlinux.laber-land.de">Start</a></li>
 			</ul>
