--- a/html/18.html
+++ b/html/18.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de">
 <head>
+<link rel="stylesheet" href="http://www.meinungsschreiber.net/stile.css" type="text/css">
+
 	<meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
 	<meta http-equiv="content-language" content="de" />
 	<meta http-equiv="expires" content="120" />
@@ -15,9 +17,7 @@
 	<!--[if IE]>
 		<style type="text/css">@import url(html/ie.css);</style>
 	<![endif]-->
-	<title>
-		<!-- name --> :: <!-- title -->
-	</title>
+<title>Meinungsschreiber.net - Die Internetgemeinschaft in der es um DEINE Meinung geht.</title>
 </head>
 <body>
 	<div id="logo">
