--- a/html/20.html
+++ b/html/20.html
@@ -7,15 +7,12 @@
 	<meta http-equiv="expires" content="120" />
 	<meta name="description" content="Laber-Land - Forengemeinschaft" />
 	<meta name="keywords" content="<!-- title -->,<!-- name --> ,laber-land,pierre,schmitz,forum,foren,board,bulletin,kostenlos,webmaster,werbefrei,ll3" />
-	<meta name="title" content="<!-- name --> <!-- title -->" />
+	<meta name="title" content="<!-- name --> <!-- title --> <!-- user -->" />
 	<meta name="author" content="Pierre Schmitz" />
 	<meta name="robots" content="index,follow" />
 	<meta name="revisit-after" content="3 days" />
 	<link rel="shortcut icon" href="http://archlinux.laber-land.de/favicon.ico" />
-	<style type="text/css">@import url(html/<!-- id -->.css) all;</style>
-	<!--[if IE]>
-		<style type="text/css">@import url(html/ie.css);</style>
-	<![endif]-->
+	<style type="text/css">@import url(html/<!-- id -->.css);</style>
 	<title>
 		<!-- name --> :: <!-- title -->
 	</title>
