--- a/html/20.html
+++ b/html/20.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="expires" content="120" />
 	<meta name="description" content="Laber-Land - Forengemeinschaft" />
 	<meta name="keywords" content="<!-- title -->,<!-- name --> ,laber-land,pierre,schmitz,forum,foren,board,bulletin,kostenlos,webmaster,werbefrei,ll3" />
-	<meta name="title" content="<!-- name --> <!-- title --> <!-- user -->" />
+	<meta name="title" content="<!-- name --> <!-- title -->" />
 	<meta name="author" content="Pierre Schmitz" />
 	<meta name="robots" content="index,follow" />
 	<meta name="revisit-after" content="3 days" />
@@ -33,6 +33,7 @@
 				<li><a href="http://archlinux.laber-land.de">Start</a></li>
 			</ul>
 		</div>
+<div style="text-align:right;font-size:10px;position:absolute;right:20px;margin:10px;color: #46494d;">angemeldet als <!-- user --></div>
 	</div>
 	<div id="content">
 		<div id="menu">
