--- a/html/20.html
+++ b/html/20.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Pierre Schmitz" />
 	<meta name="robots" content="index,follow" />
 	<meta name="revisit-after" content="3 days" />
-	<link rel="shortcut icon" href="http://archlinux.laber-land.de/favicon.ico" />
+	<link rel="shortcut icon" href="http://www.archlinux.de/favicon.ico" />
 	<style type="text/css">@import url(html/<!-- id -->.css);</style>
 	<title>
 		<!-- name --> :: <!-- title -->
@@ -20,17 +20,17 @@
 <body>
 	<div id="head_container">
 		<div id="title">
-			<div id="logo"><img src="http://archlinux.laber-land.de/images/logo.png" alt="Arch logo" /></div>
-			<img src="http://archlinux.laber-land.de/images/title.png" alt="Arch linux" />
+			<div id="logo"><img src="http://www.archlinux.de/images/logo.png" alt="Arch logo" /></div>
+			<img src="http://www.archlinux.de/images/title.png" alt="Arch linux" />
 		</div>
 		<div id="main_nav">
 			<ul>
-				<li><a href="http://archlinux.laber-land.de/download.php">Dateien</a></li>
-				<li><a href="http://archlinux.laber-land.de/aur.php">AUR</a></li>
-				<li><a href="http://archlinux.laber-land.de/bugs.php">Bugs</a></li>
-				<li><a href="http://archlinux.laber-land.de/showArticles.php">Wiki</a></li>
+				<li><a href="http://wiki.archlinux.de/?title=Download">Dateien</a></li>
+				<li><a href="http://wiki.archlinux.de/?title=AUR">AUR</a></li>
+				<li><a href="http://wiki.archlinux.de/?title=Bugs">Bugs</a></li>
+				<li><a href="http://wiki.archlinux.de">Wiki</a></li>
 				<li class="selected"><a href="#">Forum</a></li>
-				<li><a href="http://archlinux.laber-land.de">Start</a></li>
+				<li><a href="http://www.archlinux.de">Start</a></li>
 			</ul>
 		</div>
 <div style="text-align:right;font-size:10px;position:absolute;right:20px;margin:10px;color: #46494d;">angemeldet als <!-- user --></div>
