--- a/html/19.html
+++ b/html/19.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="<!-- title -->,<!-- name --> ,laber-land,pierre,schmitz,forum,foren,board,bulletin,kostenlos,webmaster,werbefrei,ll3" />
 	<meta name="title" content="<!-- name --> <!-- title -->" />
 	<meta name="author" content="Pierre Schmitz" />
-	<meta name="robots" content="index,follow" />
+	<meta name="robots" content="<!-- meta.robots -->" />
 	<meta name="revisit-after" content="3 days" />
 	<style type="text/css">@import url(html/<!-- id -->.css) all;</style>
 	<!--[if IE ]>
