repaired template of meinungsschreiber.net

--- a/html/18.html
+++ b/html/18.html
@@ -2,8 +2,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de">
 <head>
-<link rel="stylesheet" href="http://www.meinungsschreiber.net/stile.css" type="text/css">
-
 	<meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
 	<meta http-equiv="content-language" content="de" />
 	<meta http-equiv="expires" content="120" />
@@ -26,9 +24,9 @@
 	<div id="title">
 		<!-- title -->
 	</div>
-<!--	<div id="welcome">
+	<div id="welcome">
 		Willkommen <!-- user -->!
-	</div>-->
+	</div>
 	<div id="menu">
 		<!-- menu -->
 	</div>
