archlinux.de im Titel hinzugefügt

--- a/html/20.html
+++ b/html/20.html
@@ -14,7 +14,7 @@
 	<link rel="shortcut icon" href="http://www.archlinux.de/favicon.ico" />
 	<style type="text/css">@import url(html/<!-- id -->.css);</style>
 	<title>
-		<!-- name --> :: <!-- title -->
+		archlinux.de :: <!-- title -->
 	</title>
 </head>
 <body>
