first idea for new design

--- a/html/1.html
+++ b/html/1.html
@@ -13,16 +13,15 @@
 	<meta name="revisit-after" content="3 days" />
 	<link rel="shortcut icon" href="http://www.laber-land.de/favicon.ico" />
 	<style type="text/css">@import url(html/<!-- id -->.css) all;</style>
-	<!--[if IE]>
-		<style type="text/css">@import url(html/ie.css);</style>
-	<![endif]-->
 	<title>
 		<!-- name --> :: <!-- title -->
 	</title>
 </head>
 <body>
-	<div id="logo" onclick="location.href='?page=Portal;id=1;forum=1'">
-
+	<div id="head">
+		<img id="logo" src="images/logo.png" alt="Logo" onclick="location.href='?page=Portal;id=1;forum=1'" />
+		<img id="title-img" src="images/title.png" alt="Laber-Land" />
+		<img id="subtitle-img" src="images/subtitle.png" alt="Die Forengemeinschaft" />
 	</div>
 	<div id="title">
 		<!-- title -->
