--- a/html/1.html
+++ b/html/1.html
@@ -34,9 +34,11 @@
 	</div>
 	<div id="body">
 		<!-- body -->
+		<div id="right-title"></div>
 	</div>
-	<div id="webring">
-		<!-- webring -->
+	<div id="foot">
+		<img id="foot-logo" src="images/logo-blue.png" alt="" />
+		LL3.2 &mdash; Das Foren-Server-System
 	</div>
 </body>
 </html>
