some minor design changes

--- a/html/1.html
+++ b/html/1.html
@@ -37,7 +37,7 @@
 		<div id="right-title"></div>
 	</div>
 	<div id="foot">
-		<img id="foot-logo" src="images/logo-blue.png" alt="" />
+		<img id="foot-logo" src="images/logo-yellow.png" alt="" />
 		LL3.2 &mdash; Das Foren-Server-System
 	</div>
 </body>
