--- a/html/1.html
+++ b/html/1.html
@@ -12,7 +12,7 @@
 	<meta name="robots" content="<!-- meta.robots -->" />
 	<meta name="revisit-after" content="3 days" />
 	<link rel="shortcut icon" href="http://www.laber-land.de/favicon.ico" />
-	<style type="text/css">@import url(html/<!-- id -->.css) all;</style>
+	<link rel="stylesheet" media="screen" href="html/<!-- id -->.css" />
 	<title>
 		<!-- name --> :: <!-- title -->
 	</title>
