--- a/html/12.html
+++ b/html/12.html
@@ -11,48 +11,26 @@
 	<meta name="author" content="Pierre Schmitz" />
 	<meta name="robots" content="<!-- meta.robots -->" />
 	<meta name="revisit-after" content="3 days" />
-	<style type="text/css">@import url(html/<!-- id -->.css) all;</style>
-	<!--[if IE]>
-		<style type="text/css">@import url(html/ie.css);</style>
-	<![endif]-->
+	<link rel="shortcut icon" href="http://www.laber-land.de/favicon.ico" />
+	<link rel="stylesheet" media="screen" href="html/<!-- id -->.css" />
 	<title>
 		<!-- name --> :: <!-- title -->
 	</title>
 </head>
 <body>
-	<div id="logo">
-
-	</div>
-<center>
-
-<div id="welcome">
-
-	Hallo <!-- user --> !<br></br>Willkommen im <b><font color="#990000">Manga</font><font color="#000000">Center</font></b>,<br></br>DER Manga- und Anime-Forengemeinschaft <br></br><p></p>
-	</div>
-
-Du bist hier:
- <div id="title">
-
+	<div id="logo" onclick="location.href='?page=Forums;id=<!-- id -->'" >	</div>
+	<div id="title">
 		<!-- title -->
 	</div>
-</center>
+	<div id="welcome">
+		Willkommen <!-- user -->!
+	</div>
 	<div id="menu">
-
 		<!-- menu -->
 	</div>
-
-<table border="0">
-<td width="102" style="background-image:
-url(http://www.akainosekaide.de/mangacenter/seitenlogo.jpg); background-repeat:no-repeat; background-position:top;"><tr ><img src="http://www.akainosekaide.de/mangacenter/blind.gif"></img></tr></td>
-<td><tr>
-<div id="body">
-<!-- body -->
-</div>
-</tr></td>
-</table>
-<center>
-<p></p> Das MangaCenter-Board ist Teil vom <a href="http://www.laber-land.de"><b> Laber-Land</b></a><br></br>
-weitere <img src="http://www.laber-land.de/~akai/mangacenter/minill.gif"></img> -Boards findest Du hier:</center>
+	<div id="body">
+		<!-- body -->
+	</div>
 	<div id="webring">
 		<!-- webring -->
 	</div>
