--- a/html/14.html
+++ b/html/14.html
@@ -5,24 +5,20 @@
 	<meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
 	<meta http-equiv="content-language" content="de" />
 	<meta http-equiv="expires" content="120" />
-	<meta name="description" content="Youngtimer - Magazin OnLine Forum in der Laber-Land - Forengemeinschaft" />
+	<meta name="description" content="Laber-Land - Forengemeinschaft" />
 	<meta name="keywords" content="<!-- title -->,<!-- name --> ,laber-land,pierre,schmitz,forum,foren,board,bulletin,kostenlos,webmaster,werbefrei,ll3" />
 	<meta name="title" content="<!-- name --> <!-- title -->" />
 	<meta name="author" content="Pierre Schmitz" />
 	<meta name="robots" content="<!-- meta.robots -->" />
 	<meta name="revisit-after" content="3 days" />
-	<style type="text/css">@import url(html/<!-- id -->.css) all;</style>
-	<!--[if IE]>
-		<style type="text/css">@import url(html/ie.css);</style>
-	<![endif]-->
+	<link rel="shortcut icon" href="http://www.laber-land.de/favicon.ico" />
+	<link rel="stylesheet" media="screen" href="html/<!-- id -->.css" />
 	<title>
 		<!-- name --> :: <!-- title -->
 	</title>
 </head>
 <body>
-	<div id="logo">
-
-	</div>
+	<div id="logo" onclick="location.href='?page=Forums;id=<!-- id -->'" >	</div>
 	<div id="title">
 		<!-- title -->
 	</div>
@@ -38,6 +34,8 @@
 	<div id="webring">
 		<!-- webring -->
 	</div>
-<p align="center"><a href="http://www.youngtimer-magazin-online.de.vu" target="_top">Zurück zum Youngtimer - Magazin OnLine</a></p>
+	<div style="text-align:center">
+		<a href="http://www.youngtimer-magazin-online.de.vu">Zurück zum Youngtimer - Magazin OnLine</a>
+	</div>
 </body>
 </html>
