--- a/html/20.html
+++ b/html/20.html
@@ -12,7 +12,7 @@
 	<meta name="robots" content="<!-- meta.robots -->" />
 	<meta name="revisit-after" content="3 days" />
 	<link rel="shortcut icon" href="http://www.archlinux.de/favicon.ico" />
-	<style type="text/css">@import url(html/<!-- id -->.css);</style>
+	<link rel="stylesheet" media="screen" href="html/<!-- id -->.css" />
 	<title>
 		archlinux.de :: <!-- title -->
 	</title>
@@ -20,7 +20,7 @@
 <body>
 	<div id="head_container">
 		<div id="title">
-			<div id="logo"><img src="http://www.archlinux.de/images/logo.png" alt="Arch logo" /></div>
+			<div id="logo"><img src="http://www.archlinux.de/images/logo.png" alt="Arch logo"  onclick="location.href='?page=Forums;id=<!-- id -->'" /></div>
 			<img src="http://www.archlinux.de/images/title.png" alt="Arch linux" />
 		</div>
 		<div id="main_nav">
@@ -42,10 +42,6 @@
 		<div id="body">
 			<!-- body -->
 		</div>
-	</div>
-
-	<div id="webring">
-		<!-- webring -->
 	</div>
 </body>
 </html>
