--- a/html/23.html
+++ b/html/23.html
@@ -11,18 +11,14 @@
 	<meta name="author" content="Pierre Schmitz" />
 	<meta name="robots" content="<!-- meta.robots -->" />
 	<meta name="revisit-after" content="3 days" />
-	<style type="text/css">@import url(html/<!-- id -->.css) all;</style>
-	<!--[if IE]>
-		<style type="text/css">@import url(html/ie.css);</style>
-	<![endif]-->
+	<link rel="shortcut icon" href="http://www.laber-land.de/favicon.ico" />
+	<link rel="stylesheet" media="screen" href="html/<!-- id -->.css" />
 	<title>
 		<!-- name --> :: <!-- title -->
 	</title>
 </head>
 <body>
-	<div id="logo" onclick="location.href='http://www.deshalbfrei.org'">
-
-	</div>
+	<div id="logo" onclick="location.href='?page=Forums;id=<!-- id -->'">	</div>
 	<div id="title">
 		<!-- title -->
 	</div>
