--- a/html/20.html
+++ b/html/20.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="content-language" content="de" />
 	<meta http-equiv="expires" content="120" />
 	<meta name="description" content="Laber-Land - Forengemeinschaft" />
-	<meta name="keywords" content="<!-- title -->,<!-- name --> ,laber-land,pierre,schmitz,forum,foren,board,bulletin,kostenlos,webmaster,werbefrei,ll3" />
+	<meta name="keywords" content="<!-- title -->,<!-- name --> ,arch,linux,archlinux,distribution,i686,amd64" />
 	<meta name="title" content="<!-- name --> <!-- title -->" />
 	<meta name="author" content="Pierre Schmitz" />
 	<meta name="robots" content="<!-- meta.robots -->" />
@@ -20,7 +20,7 @@
 <body>
 	<div id="head_container">
 		<div id="title">
-			<div id="logo"><img src="http://www.archlinux.de/images/logo.png" alt="Arch logo"  onclick="location.href='?page=Forums;id=<!-- id -->'" /></div>
+			<div id="logo"><img src="http://www.archlinux.de/images/logo.png" alt="Arch logo"  onclick="location.href='http://www.archlinux.de'" /></div>
 			<img src="http://www.archlinux.de/images/title.png" alt="Arch linux" />
 		</div>
 		<div id="main_nav">
