--- a/html/26.html
+++ b/html/26.html
@@ -27,6 +27,7 @@
 	</div>
 	<div id="menu">
 		<!-- menu -->
+                <a href="http://wiki.linuxfriendlyhardware.org"><span class="button">Link zum Wiki</span></a>
 	</div>
 	<div id="body">
 		<!-- body -->
