--- a/html/26.html
+++ b/html/26.html
@@ -16,24 +16,79 @@
 	<title>
 		<!-- name --> :: <!-- title -->
 	</title>
+        <link href="http://style.linuxfriendlyhardware.org/css/layout_2col_left.css" rel="stylesheet" type="text/css"/>
+	<!--[if lte IE 7]>
+	<link href="http://style.linuxfriendlyhardware.org/css/explorer/iehacks_2col_left.css" rel="stylesheet" type="text/css" />
+	<![endif]-->
 </head>
 <body>
-	<div id="logo" onclick="location.href='?page=Forums;id=<!-- id -->'">	</div>
-	<div id="title">
-		<!-- title -->
+
+<div id="page_margins">
+<div id="page" class="hold_floats">
+
+<div id="header">
+	<div id="topnav">
+
+		<a href="http://www.laber-land.de/?page=Forums;id=26">Willkommen <!-- user --></a>
 	</div>
-	<div id="welcome">
-		Willkommen <!-- user -->!
-	</div>
-	<div id="menu">
+	<img src="http://style.linuxfriendlyhardware.org/title.png" alt="LFH"/>
+</div>
+
+<div id="nav">
+<div id="nav_main" >
+	<ul>
+		<li><a href="http://www.linuxfriendlyhardware.org">Home</a></li>
+		<li id="current"><a href="http://www.laber-land.de/?page=Forums;id=26">Forum</a></li>
+		<li><a href="http://wiki.linuxfriendlyhardware.org/Hauptseite">Wiki</a></li>
+	</ul>
+</div>
+</div>
+<!-- 3-Spalten-Hauptteil -->
+<div id="main">
+
+  <div id="col1">
+      <div id="col1_content" class="clearfix">
+
+	  <ul id="submenu">
+	    <li id="title">Forum</li>
+	       	<li><a href="/?page=Forums;id=26">&Uuml;bersicht</a></li>
+		<li><a href="/?page=Search;id=26">Suche</a></li>
+		<li><a href="/?page=Recent;id=26">Aktuelles</a></li>
+
+				
+	    </ul>
+
+      </div>
+    </div>
+
+    <div id="col3">
+      <div id="col3_content" class="clearfix">
+     	<div id="menu">
 		<!-- menu -->
-                <a href="http://wiki.linuxfriendlyhardware.org"><span class="button">Link zum Wiki</span></a>
 	</div>
 	<div id="body">
 		<!-- body -->
-	</div>
+	</div><!--
 	<div id="webring">
-		<!-- webring -->
-	</div>
+		 webring 
+	</div>-->
+
+      </div>
+      <!-- IE Column Clearing -->
+         <div id="ie_clearing">&nbsp;</div>
+      <!-- Ende: IE Column Clearing -->
+</div>
+<!-- Content - Ende -->
+</div>
+
+
+<!-- Footer Start-->
+<div id="footer"><a href="#">Impressum</a> | <a href="http://www.laber-land.de/?page=Privacy;id=26"> Datenschutz</a> <br />
+  <a href="http://validator.w3.org/check?uri=http%3A//www.yaml.de/index.html">XHTML</a> | <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fwww.yaml.de%2Findex.html">CSS</a> | based on <a href="http://yaml.de">Yet Another Multicolumn Layout</a> 
+</div>
+<!-- Footer Ende -->
+
+</div>
+</div>
 </body>
 </html>
