--- a/html/26.html
+++ b/html/26.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Pierre Schmitz" />
 	<meta name="robots" content="<!-- meta.robots -->" />
 	<meta name="revisit-after" content="3 days" />
-	<link rel="shortcut icon" href="http://www.laber-land.de/favicon.ico" />
+	<link rel="shortcut icon" href="http://style.linuxfriendlyhardware.org/favicon.ico" />
 	<link rel="stylesheet" media="screen" href="html/<!-- id -->.css" />
 	<title>
 		<!-- name --> :: <!-- title -->
@@ -39,7 +39,7 @@
 	<ul>
 		<li><a href="http://www.linuxfriendlyhardware.org">Home</a></li>
 		<li id="current"><a href="http://www.laber-land.de/?page=Forums;id=26">Forum</a></li>
-		<li><a href="http://wiki.linuxfriendlyhardware.org/Hauptseite">Wiki</a></li>
+		<!--<li><a href="http://wiki.linuxfriendlyhardware.org/Hauptseite">Wiki</a></li>-->
 	</ul>
 </div>
 </div>
@@ -54,8 +54,10 @@
 	       	<li><a href="/?page=Forums;id=26">&Uuml;bersicht</a></li>
 		<li><a href="/?page=Search;id=26">Suche</a></li>
 		<li><a href="/?page=Recent;id=26">Aktuelles</a></li>
-
-				
+             <li id="title">Links</li>
+		 <li><a href="http://sourceforge.net/projects/linuxfriendly">SF.net</a></li>
+ 		 <li><a href="http://wiki.linuxfriendlyhardware.org/Hauptseite">Wiki</a></li>                
+  		 <li><a href="http://linuxfriendly.svn.sourceforge.net/viewvc/linuxfriendly/">SVN</a></li>                        	
 	    </ul>
 
       </div>
