--- a/oxygen.html
+++ b/oxygen.html
@@ -7,27 +7,42 @@
 	<!-- head -->
 </head>
 <body>
-<div id="brd-<!-- page -->" class="brd-page">
-	<div class="brd">
-		<div class="brd-page">
-			<div class="brd">
-				<div id="brd-title">
-					<div><strong><!-- name --></strong></div>
-				</div>
-				<div id="brd-desc">
-					<p><!-- description --></p>
-				</div>
-				<!-- menu -->
-				<!-- visit -->
-				<div class="divider"><hr /></div>
-				<!-- body -->
-				<div class="divider"><hr /></div>
-				<!-- stats -->
-				<!-- about -->
-				<!-- debug -->
-			</div>
-		</div>
-	</div>
+<div id="brd-wrap" class="brd">
+<div id="brd-<!-- page -->" class="brd-page basic-page">
+
+<div id="brd-head" class="gen-content">
+	<p id="brd-title"><a><!-- name --></a></p>
+	<p id="brd-desc"><!-- description --></p>
 </div>
+
+<div id="brd-navlinks" class="gen-content">
+	<!-- menu -->
+</div>
+
+<div id="brd-visit" class="gen-content">
+	<p id="welcome"><!-- welcome --></p>
+	<p id="visit-links" class="options"><!-- visit --></p>
+</div>
+
+<div class="hr"><hr /></div>
+
+
+<div id="brd-main" class="main-wrapper">
+<!-- body -->
+</div>
+
+<!-- stats -->
+
+<div class="hr"><hr /></div>
+
+<div id="brd-about" class="gen-content">
+	<p id="copyright"><!-- about --></p>
+</div>
+
+<!-- debug -->
+
+</div>
+</div>
+
 </body>
 </html>
