repeat user-menu at the bottom

--- a/ll.html
+++ b/ll.html
@@ -14,12 +14,15 @@
 		<div id="main-menu">
 			<!-- main-menu -->
 		</div>
-		<div id="user-menu">
+		<div id="sub-menu">
 			<!-- user-welcome -->
 			<!-- user-menu -->
 		</div>
 		<div id="body">
 			<!-- body -->
+		</div>
+		<div id="foot-menu">
+			<!-- user-menu -->
 		</div>
 	</div>
 </body>
