--- a/ll.html
+++ b/ll.html
@@ -4,12 +4,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<!-- head -->
+	<link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
 	<div id="ll">
 		<div id="title">
 			<h1><!-- name --></h1>
 			<h2><!-- title --></h2>
+			<img src="images/logo.png" />
 		</div>
 		<div id="main-menu">
 			<!-- main-menu -->
