--- a/ll.html
+++ b/ll.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<!-- head -->
-	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="shortcut icon" href="images/favicon.ico" />
 </head>
 <body>
 	<div id="ll">
