fix some minor HTML and CSS errors. Use HTML5 instead of XHTML 1.1

--- a/ll.html
+++ b/ll.html
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" 
-	"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE HTML>
+<html>
 <head>
 	<!-- head -->
 	<link rel="shortcut icon" href="images/favicon.ico" />
@@ -11,7 +9,7 @@
 		<div id="title">
 			<h1><!-- name --></h1>
 			<h2><!-- title --></h2>
-			<img src="images/logo.png" />
+			<img src="images/logo.png" alt ="" />
 		</div>
 		<div id="main-menu">
 			<!-- main-menu -->
